--- a/style.css
+++ b/style.css
@@ -58,15 +58,15 @@ section h2 {
 
 .index ol {
   font-size: 14px;
-  margin: 36px auto;
-  padding: 0px 32px;
-  display: inline-block;
+  margin: 0 auto;
+  display: table;
 }
 
 .line {
   border: #333 1px solid;
-  width: calc(100% - 12%);
-  margin: 32px auto 0px;
+  width: calc(100% - 32%);
+  margin: 32px auto 0;
+  padding: 30px;
 }
 
 .index li + li {
@@ -178,8 +178,6 @@ footer {
   .detail h2 {
     margin-top: 0;
   }
-
-
 
 
 }
